--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
+    <ul>
+      <li>Html/CSS</li>
+      <li>Interaction Design</li>
+    </ul>
 
   </body>
 </html>
